fix z-index

--- a/source/scss/blocks/_sticky.scss
+++ b/source/scss/blocks/_sticky.scss
@@ -8,7 +8,7 @@
   align-items: flex-end;
   grid-gap: 77px;
   // z-index: 10;
-  z-index: 2;
+  z-index: 8;
 
   @media (max-width: 576px) {
     bottom: 0;
